Fixed z-index for first_time_visit block

--- a/app/assets/stylesheets/layout/_first_time_visit.scss
+++ b/app/assets/stylesheets/layout/_first_time_visit.scss
@@ -7,7 +7,7 @@
   left: 0;
   padding: 30px 60px;
   margin: 0 auto;
-  z-index: 1;
+  z-index: 10;
   width: 800px;
 
   @include iphone {
